# mlops25-m3-integration-distribution-

./: README.md  dockerfile  main.py  params.yaml  pyproject.toml
data/models/: model.ts.pt  model_weights.pt
scripts/: export_torchscript.py  test_predict.py
src/app/: api.py
src/ml/: config.py  dataset.py  model.py  predict.py  train.py  utilis.py
