[project]
name = "mlops25-m3-integration-distribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.0",
    "numpy<2",
    "pydantic>=2.12.5",
    "torch==2.2.2",
    "torchvision>=0.17.2",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
